--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.servlet.multipart.max-request-size=215MB
 
 
 spring.resources.static-locations=file:/F:/image/, classpath:/static/
-spring.mvc.static-path-pattern=/**
+spring.mvc.static-path-pattern=/resources/**
